[gd_scene load_steps=4 format=3 uid="uid://cthvlothu3xns"]

[ext_resource type="Script" uid="uid://cklw46qoemb3d" path="res://Game/Game/game.gd" id="1_qtw4q"]
[ext_resource type="FontFile" uid="uid://bqelt1bh8mmnv" path="res://Game/Game/assets/fonts/Helvetica-LT-65-Medium.ttf" id="2_2r57w"]

[sub_resource type="LabelSettings" id="LabelSettings_qtw4q"]
font = ExtResource("2_2r57w")
font_size = 65

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qtw4q")

[node name="PlayerLetters" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="CardsSuperContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -298.0
offset_bottom = 298.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="RoundScoreLabel" type="Label" parent="CardsSuperContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "123 - 345 - 27 = 0"
label_settings = SubResource("LabelSettings_qtw4q")
horizontal_alignment = 1
vertical_alignment = 1

[node name="WordContainerPanel" type="PanelContainer" parent="CardsSuperContainer"]
layout_mode = 2

[node name="WordContainer" type="HFlowContainer" parent="CardsSuperContainer/WordContainerPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 276)
layout_mode = 2
size_flags_vertical = 6
last_wrap_alignment = 1

[node name="SubmitWordButton" type="Button" parent="CardsSuperContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
disabled = true
text = "Submit Word"

[node name="HandContainerPanel" type="PanelContainer" parent="CardsSuperContainer"]
layout_mode = 2

[node name="HandContainer" type="HFlowContainer" parent="CardsSuperContainer/HandContainerPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 276)
layout_mode = 2
size_flags_vertical = 6
last_wrap_alignment = 1

[node name="DrawButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -96.0
offset_right = 172.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 64
text = "Draw
"

[node name="EndTurnButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -286.0
offset_top = -96.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_font_sizes/font_size = 64
text = "End Turn"

[connection signal="pressed" from="CardsSuperContainer/SubmitWordButton" to="." method="_on_submit_word_button_pressed"]
[connection signal="pressed" from="DrawButton" to="." method="_on_draw_button_pressed"]
[connection signal="pressed" from="EndTurnButton" to="." method="_on_end_turn_button_pressed"]
